start smile gallery modal

--- a/index.html
+++ b/index.html
@@ -796,6 +796,109 @@
             </div>
         </div>
 
+        <!-- Smile Gallery -->
+        <section class="smile-gallery" id="smile-gallery">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-1">
+                        <h2>Smile Gallery</h2>
+                        <p>Whether you require a minor cosmetic treatment or a total smile makeover, you can trust our doctors to provide the highest quality treatment available. Click on the button below to see some before and after examples of their work.</p>
+                        <a class="button" data-toggle="modal" data-target="#smile-gallery-modal">View Smile Gallery</a>
+                    </div>
+
+                    <div class="col-md-6 col-2" data-toggle="modal" data-target="#smile-gallery-modal">
+                        <div class="smile-before">
+                            <img src="images/smile-gallery/danielle.png" alt="Danielle Smile Gallery">
+                        </div>
+                        <div class="before-after-wrap"><p>Before</p><p>After</p></div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Smile Gallery Modal -->
+        <div class="modal fade team-modal" id="smile-gallery-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-body">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title">Smile Gallery</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div id="oc-portfolio-3" class="center owl-carousel portfolio-carousel carousel-widget" data-margin="40" data-nav="true" data-pagi="false" data-items-xxs="1" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="1" data-loop="true" data-autoplay="7000" data-speed="1000">
+
+                                <div class="oc-item">
+                                    <div class="iportfolio">
+                                        <div class="portfolio-image">
+                                            <a>
+                                                <img src="images/smile-gallery/mary-jane.png" alt="Mary Jane">
+                                            </a>
+                                            <div class="before-after-wrap">
+                                                <p>Before</p>
+                                                <p>After</p>
+                                            </div>
+                                            <p>Mary Jane had a severe bite problem and was unhappy with her appearance. After completing her treatment, she looks years younger and feels great.</p>
+                                            <p>  "I am very happy with my treatment and service. Dr. Ikuta is very good about explaining the whole procedure to me and I love my teeth; they are lovely. He was very patient and made me feel very comfortable with everything. I thank him very much."</p>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+
+                                <div class="oc-item" data-toggle="modal" data-target="#george">
+                                    <div class="iportfolio">
+                                        <div class="portfolio-image">
+                                            <a>
+                                                <img src="images/team/george.jpg" alt="George">
+                                            </a>
+                                        </div>
+                                        <h4>George</h4>
+                                    </div>
+                                </div>
+
+
+                                <div class="oc-item" data-toggle="modal" data-target="#lisa">
+                                    <div class="iportfolio">
+                                        <div class="portfolio-image">
+                                            <a>
+                                                <img src="images/team/lisa.jpg" alt="Lisa">
+                                            </a>
+                                        </div>
+                                        <h4>Lisa</h4>
+                                    </div>
+                                </div>
+
+                                <div class="oc-item" data-toggle="modal" data-target="#eileen">
+                                    <div class="iportfolio">
+                                        <div class="portfolio-image">
+                                            <a>
+                                                <img src="images/team/eileen.jpg" alt="Eileen">
+                                            </a>
+                                        </div>
+                                        <h4>Eileen</h4>
+                                    </div>
+                                </div>
+
+                                <div class="oc-item" data-toggle="modal" data-target="#evelyn">
+                                    <div class="iportfolio">
+                                        <div class="portfolio-image">
+                                            <a>
+                                                <img src="images/team/evelyn.jpg" alt="Evelyn">
+                                            </a>
+                                        </div>
+                                        <h4>Evelyn</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
 
 
 
