--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
         </section>
 
         <!-- Smile Gallery Modal -->
-        <div class="modal fade team-modal" id="smile-gallery-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade smile-gallery-modal" id="smile-gallery-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-body">
                     <div class="modal-content">
