finish smile gallery modal

--- a/index.html
+++ b/index.html
@@ -829,6 +829,25 @@
                         <div class="modal-body">
                             <div id="oc-portfolio-3" class="center owl-carousel portfolio-carousel carousel-widget" data-margin="40" data-nav="true" data-pagi="false" data-items-xxs="1" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="1" data-loop="true" data-autoplay="7000" data-speed="1000">
 
+
+                                <div class="oc-item">
+                                    <div class="iportfolio">
+                                        <div class="portfolio-image">
+                                            <a>
+                                                <img src="images/smile-gallery/dennis-ikuta.png" alt="Dennis Ikuta">
+                                            </a>
+                                            <div class="before-after-wrap">
+                                                <p>Before</p>
+                                                <p>After</p>
+                                            </div>
+                                            <p>"For more than 20 years, I was bothered by chronic neck, shoulder and facial pain. I had so much tension that it caused my lip and mouth muscles to function unevenly, causing my teeth to look crooked. During my Las Vegas Institute for Advanced Dental Studies (LVI) training, I learned about Neuromuscular Dentistry and full mouth rehabilitation and decided it was for me. I feel, look and function so much better now that I enthusiastically recommend it to my patients." </p>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+
+
                                 <div class="oc-item">
                                     <div class="iportfolio">
                                         <div class="portfolio-image">
@@ -846,51 +865,159 @@
                                     </div>
                                 </div>
 
-
-                                <div class="oc-item" data-toggle="modal" data-target="#george">
+                                <div class="oc-item">
                                     <div class="iportfolio">
                                         <div class="portfolio-image">
                                             <a>
-                                                <img src="images/team/george.jpg" alt="George">
+                                                <img src="images/smile-gallery/leslie.png" alt="Leslie">
                                             </a>
+                                            <div class="before-after-wrap">
+                                                <p>Before</p>
+                                                <p>After</p>
+                                            </div>
+                                            <p>Leslie, like so many people, had issues with both her appearance and symptoms. She describes her time with us quite well, and you can view the results for yourself.  </p>
+                                            <p>"I had a full mouth reconstruction. Prior to treatment, I was experiencing headaches and I would find myself clenching my teeth. I had a lot of tension in my jaw and neck. I was also very embarrassed of my smile. Now, I have no pain or tension. My smile is beautiful and my face looks better. I'm very confident about my smile and looks. This is the best thing I have ever done!"</p>
                                         </div>
-                                        <h4>George</h4>
+
+                                    </div>
+                                </div>
+
+                                <div class="oc-item">
+                                    <div class="iportfolio">
+                                        <div class="portfolio-image">
+                                            <a>
+                                                <img src="images/smile-gallery/brenda.png" alt="Brenda">
+                                            </a>
+                                            <div class="before-after-wrap">
+                                                <p>Before</p>
+                                                <p>After</p>
+                                            </div>
+                                            <p>When we first saw Brenda, she suffered from "crippling, severe migraines" and clicking in her jaw. She was also unhappy with the appearance of her teeth. One look at her eyes and smile now, you can tell that she not only loves the way her teeth look, but she feels terrific. She says, "My teeth look so natural. My visits with Dr. Ikuta and his wonderful team have always been professional, friendly and pleasant. I have truly been pampered."</p>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                                <div class="oc-item">
+                                    <div class="iportfolio">
+                                        <div class="portfolio-image">
+                                            <a>
+                                                <img src="images/smile-gallery/earnest.png" alt="Ernest">
+                                            </a>
+                                            <div class="before-after-wrap">
+                                                <p>Before</p>
+                                                <p>After</p>
+                                            </div>
+                                            <p>Ernest was preparing to go to a reunion with WWII Navy buddies. He wanted to look good for the occasion. Over the years, due to tooth loss, decay and time, his teeth - especially his lower ones -- had become crooked, discolored and unattractive. (As we grow older, the lower teeth show a lot more.) After some discussion and planning, we decided to do lower porcelain veneers for Ernest. He impressed his old buddies with his nice smile. He is also a good example that you are never too old to improve your appearance. Ernest will be 87 this year.</p>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                                <div class="oc-item">
+                                    <div class="iportfolio">
+                                        <div class="portfolio-image">
+                                            <a>
+                                                <img src="images/smile-gallery/george.png" alt="George">
+                                            </a>
+                                            <div class="before-after-wrap">
+                                                <p>Before</p>
+                                                <p>After</p>
+                                            </div>
+                                            <p>George is a friendly and happy guy who loves to smile. He was self conscious about his "fangs". Now he can proudly flash his new "grill" sans fangs.</p>
+                                            <p>   "For 25 years, I've traveled to Visalia to see Dr. Ikuta and it has been worth it! His professional style and pain-free expert care are matchless. Despite many teenage years of orthodontia, I was never satisfied with my cosmetic appearance and my bite felt uncomfortable. Dr. Ikuta provided me with a full set of porcelain veneers. Now my smile is natural looking and I feel more confident. I have no pain in my jaw or neck. I'm indebted to Dr. Ikuta and his team for improving my health and my appearance."</p>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                                <div class="oc-item">
+                                    <div class="iportfolio">
+                                        <div class="portfolio-image">
+                                            <a>
+                                                <img src="images/smile-gallery/donna.png" alt="Donna">
+                                            </a>
+                                            <div class="before-after-wrap">
+                                                <p>Before</p>
+                                                <p>After</p>
+                                            </div>
+                                            <p>Over 25 years ago, Donna sustained damage to her front teeth as a result of an automobile accident.  
+                                                </p>
+                                            <p>"The original repairs never left me completely satisfied. Dr. Ikuta suggested porcelain veneers to improve the cosmetic appearance of my teeth. The results have exceeded my expectations. an improvement over my pre-accident appearance. Dr. Ikuta and his staff were extremely professional. I appreciate how his work has resulted in the improvement of my appearance and smile."</p>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                                <div class="oc-item">
+                                    <div class="iportfolio">
+                                        <div class="portfolio-image">
+                                            <a>
+                                                <img src="images/smile-gallery/gail.png" alt="Gale">
+                                            </a>
+                                            <div class="before-after-wrap">
+                                                <p>Before</p>
+                                                <p>After</p>
+                                            </div>
+                                            <p>Over the years, Gale had a lot of old fillings and crowns, and she had lost some of her teeth. She was unhappy with her appearance because of the discoloration, stains, chips and missing teeth on both her upper and lower arches. At her request, we worked on her in stages. We restored her upper front teeth, lower front and then her back teeth. As you can see, she looks great and many years younger. Better yet, she feels a lot better about herself.</p>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                                <div class="oc-item">
+                                    <div class="iportfolio">
+                                        <div class="portfolio-image">
+                                            <a>
+                                                <img src="images/smile-gallery/danielle.png" alt="Danielle">
+                                            </a>
+                                            <div class="before-after-wrap">
+                                                <p>Before</p>
+                                                <p>After</p>
+                                            </div>
+                                            <p>Danielle is my oldest daughter. At the age of 12 she had a run-in with an oak tree. She injured and chipped her front tooth. We did direct bonding for her until she got older. By the age of 21, her tooth had discolored, she noticed that she had been grinding her teeth and didn't like the appearance of her uneven gums. To fix these problems, we did a neuromuscular bite evaluation, smile design and porcelain veneers. I'm somewhat biased, but I think she looks great.  </p>
+                                            <p>I recommend what I do for myself and those closest to me.</p>
+                                        </div>
+
                                     </div>
                                 </div>
 
 
-                                <div class="oc-item" data-toggle="modal" data-target="#lisa">
+                                <div class="oc-item">
                                     <div class="iportfolio">
                                         <div class="portfolio-image">
                                             <a>
-                                                <img src="images/team/lisa.jpg" alt="Lisa">
+                                                <img src="images/smile-gallery/david.png" alt="David">
                                             </a>
+                                            <div class="before-after-wrap">
+                                                <p>Before</p>
+                                                <p>After</p>
+                                            </div>
+                                            <p>David came to us because he was getting married and wanted to look good for his wedding. His teeth were crooked, spaced and uneven. After a smile evaluation and smile design, we did some gingival recontouring (gum reshaping) and porcelain veneers. David had a great new smile for his wedding pictures.</p>
                                         </div>
-                                        <h4>Lisa</h4>
+
                                     </div>
                                 </div>
 
-                                <div class="oc-item" data-toggle="modal" data-target="#eileen">
+                                <div class="oc-item">
                                     <div class="iportfolio">
                                         <div class="portfolio-image">
                                             <a>
-                                                <img src="images/team/eileen.jpg" alt="Eileen">
+                                                <img src="images/smile-gallery/laura.png" alt="Laura">
                                             </a>
+                                            <div class="before-after-wrap">
+                                                <p>Before</p>
+                                                <p>After</p>
+                                            </div>
+                                            <p>Laura had completed orthodontic treatment. Her teeth were straight, but she was not happy with her appearance. Her teeth were too small and she had a lot of spaces. We did a one-visit, direct composite bonding for her. She has been quite happy with her new appearance.</p>
                                         </div>
-                                        <h4>Eileen</h4>
+
                                     </div>
                                 </div>
 
-                                <div class="oc-item" data-toggle="modal" data-target="#evelyn">
-                                    <div class="iportfolio">
-                                        <div class="portfolio-image">
-                                            <a>
-                                                <img src="images/team/evelyn.jpg" alt="Evelyn">
-                                            </a>
-                                        </div>
-                                        <h4>Evelyn</h4>
-                                    </div>
-                                </div>
+
+
+
                             </div>
                         </div>
                     </div>
