finish financing and new patient forms sections

--- a/index.html
+++ b/index.html
@@ -1015,15 +1015,54 @@
                                     </div>
                                 </div>
 
-
-
-
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <!-- Patient Forms -->
+        <section id="patient-forms" class="patient-forms">
+            <div class="container">
+                <div class="row">
+                    <div class="center">
+                        <h2>New Patient Forms</h2>
+                        <p>Filling out these forms will save you time when you visit.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="button-wrap"><a class="button button-1" href="https://www.ident.ws/template_include/pi_login.jsp?site=12863&practiceId=38044&page=Patient+Information" target="_blank">Existing Patient Login</a></div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="button-wrap"><a class="button button-2" href="https://www.ident.ws/template_include/new_patient_sign_in.do?site=12863&practiceId=38044" target="_blank">New Patient Forms</a></div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="button-wrap"><a class="button button-3" href="http://www.ikutasmiles.com/pdf/tmj-sleep-apnea.pdf " target=")blank">TMJ/Apnea Questionnaire</a></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Financing -->
+        <section id="financing" class="financing">
+            <div class="container">
+                <div class="row">
+                    <div class="center">
+                        <h6>Financing Available</h6>
+                    </div>
+                    <div class="col-md-6 col-1">
+                        <a href="https://www.carecredit.com/" target="_blank">
+                            <img src="images/care-credit-footer.png" alt="Care Credit">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-2">
+                        <a href=" https://www.lendingclub.com/patientsolutions/" target="_blank">
+                            <img src="images/Lending_club_logo.png" alt="Lending Club">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
