fix text hovering over image on our services section

--- a/index.html
+++ b/index.html
@@ -538,6 +538,8 @@
         </div>
 
         <!-- Services -->
+        <div style="background:#E7F3F1;height:110px;" class="hidden-md hidden-sm hidden-xs hidden-xxs"></div>
+
         <section id="services" class="services">
             <div class="container">
                 <div class="row">
@@ -1065,57 +1067,12 @@
         </section>
 
 
+        <section id="location" class="location">
 
-
-
-        <section id="section-location" class="content-section">
-
-            <div class="info--wrapper">
-                <div class="flex--wrapper">
-                    <div class="info--text flex--item">
-                        <h5 class="address">2250 NW Flanders St., Suite 109<br>Portland, OR 97210</h5>
-                        <h5 class="existing-patient-text">Existing Patients: <a href="tel:1-503-228-6294" class="existing-patient-number">(503)&nbsp;228&#8209;6294</a></h5>
-                        <h6 class="info--map-link">
-                            <a href="https://www.google.com/maps/place/Northwest+Portland+Dental/@45.5253822,-122.699617,17z/data=!4m8!1m2!2m1!1snorthwest+portland+dental!3m4!1s0x0:0x395275f65100f05d!8m2!3d45.525405!4d-122.6973832" target="_blank">Click for map & directions</a>
-                        </h6>
-                        <div class="social-media-links">
-                            <a href="https://www.facebook.com/NorthwestPortlandDental?fref=ts" target="_blank" class="social-icon si-colored si-facebook ">
-                                <i class="icon-facebook"></i>
-                                <i class="icon-facebook"></i>
-                            </a>
-
-                            <a href="https://www.google.com/maps/place/Northwest+Portland+Dental/@45.5253822,-122.699617,17z/data=!4m8!1m2!2m1!1snorthwest+portland+dental!3m4!1s0x0:0x395275f65100f05d!8m2!3d45.525405!4d-122.6973832" target="_blank" class="social-icon si-colored si-google">
-                                <i class="icon-google-plus"></i>
-                                <i class="icon-google-plus"></i>
-                            </a>
-
-                            <a href="https://www.yelp.com/biz/northwest-portland-dental-portland-2" class="social-icon si-colored si-yelp " target="_blank">
-                                <i class="icon-yelp"></i>
-                                <i class="icon-yelp"></i>
-                            </a>
-
-                        </div>
-                    </div>
-                    <div class="info--logo flex--item">
-                        <a href="#" data-scrollTo="#header" data-offset="60">
-                            <img src="assets/dietrich-logo.svg" alt="Doctor Dietrich">
-                            <h5>Richard L Dietrich, DMD</h5>
-                        </a>
-                    </div>
-                    <div class="info--contact flex--item">
-                        <p class="new-patient-text">New Patient Hotline</p>
-                        <h2 class="new-patient-number"><a href="tel:1-888-492-0583">(888)&nbsp;492&#8209;0583</a></h2>
-                        <a href="#" class="btn" data-target="#requestAppointmentForm" data-toggle="modal">Request An Appointment</a>
-                    </div>
-                </div>
-            </div> <!--End flex wrapper-->
-
-            <div class="map--wrapper">
-                <a href="https://www.google.com/maps/place/Northwest+Portland+Dental/@45.5253822,-122.699617,17z/data=!4m8!1m2!2m1!1snorthwest+portland+dental!3m4!1s0x0:0x395275f65100f05d!8m2!3d45.525405!4d-122.6973832" target="_blank"><div id="google-map5" class="gmap"></div></a>
-            </div>
-
-            <div class="clearfix"></div>
         </section>
+
+
+
 
         <div id="requestModalContainer">
 
