--- a/index.html
+++ b/index.html
@@ -1066,8 +1066,67 @@
             </div>
         </section>
 
+        <a href="https://www.google.com/maps/place/Dr.+Dennis+D.+Ikuta,+DDS/@36.599125,-119.446157,15z/data=!4m2!3m1!1s0x0:0x626274332a83b60b?sa=X&ved=0ahUKEwjd5eb996nSAhVKwWMKHf9KDHsQ_BIIbjAK" target="_blank"><div id="google-map" class="gmap"></div></a>
 
         <section id="location" class="location">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4 col-1">
+                        <h6 class="h6-1">Deric Ikuta, DDS</h6>
+                        <h6>Dennis Ikuta, DDS</h6>
+                        <p class="p-1">1112 C Street</p>
+                        <p class="p-2">Reedley, CA 93654</p>
+                        <p class="p-3"><a target=_blank" href="https://www.google.com/maps/place/Dr.+Dennis+D.+Ikuta,+DDS/@36.599125,-119.446157,15z/data=!4m2!3m1!1s0x0:0x626274332a83b60b?sa=X&ved=0ahUKEwjd5eb996nSAhVKwWMKHf9KDHsQ_BIIbjAK">Click to view map &amp; directions </a></p>
+                        <div class="social-wrap">
+                            <a href="#" class="social-icon si-colored si-facebook">
+                                <i class="icon-facebook"></i>
+                                <i class="icon-facebook"></i>
+                            </a>
+
+
+                            <a href="#" class="social-icon si-colored si-gplus">
+                                <i class="icon-gplus"></i>
+                                <i class="icon-gplus"></i>
+                            </a>
+
+                            <a href="#" class="social-icon si-colored si-yelp">
+                                <i class="icon-yelp"></i>
+                                <i class="icon-yelp"></i>
+                            </a>
+                        </div>
+
+                    </div>
+                    <div class="col-sm-4 col-2">
+                        <div class="img-wrap img-wrap-one"><img src="images/ikuta-symbol.svg" alt="Ikuta Symbol"></div>
+                        <div class="img-wrap img-wrap-two"><img src="images/ikuta-label.svg" alt="Dr. Ikuta"></div>
+                        <p class="p-1">New Patient Hotline</p>
+                        <p class="p-2"><a href="tel:+18887038289">(888) 703&#8209;8289</a></p>
+                        <p class="p-3">Existing patients: <a href="tel:+15596386321">(559) 638&#8209;6321</a></p>
+                        <div class="button-wrap"><a class="button" data-toggle="modal" data-target="#contact-modal">Request an Appointment</a></div>
+
+                    </div>
+                    <div class="col-sm-4 col-3">
+                        <h6>Office Hours:</h6>
+                        <div class="schedule">
+                            <div class="days">
+                                <p>Mon:</p>
+                                <p>Tues:</p>
+                                <p>Wed:</p>
+                                <p>Thurs:</p>
+                                <p>Fri:</p>
+                            </div>
+                            <div class="times">
+                                <p>8:00am - 5:00pm</p>
+                                <p>8:00am - 5:00pm</p>
+                                <p>8:00am - 5:00pm</p>
+                                <p>8:00am - 5:00pm</p>
+                                <p>8:00am - 5:00pm</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
         </section>
 
@@ -1118,11 +1177,6 @@
                 </div>
             </div>
 
-            <script type="text/template" id="success_msg">
-                <p>Congratulations! Dentistry is a big part of a healthy life, and we're excited to be a part of yours. We will
-                    contact you in the next 2 business days to schedule your appointment and to answer any questions you may still have.
-                    Thank you!</p>
-            </script>
         </div>
 
     </div>
@@ -1131,35 +1185,47 @@
 
 <!-- Footer
   ============================================= -->
-<footer id="footer" class="footer ">
+<footer id="footer" class="dark">
 
-    <div class="footer-padding">
-        <div class="container">
-            <div class="flex--wrapper">
-                <div class="text">
-                    <p class="notd">Copyright &copy; 2017 All Rights Reserved by <a href="http://www.tysonsteele.com/" target="_blank" class="">Tyson<span style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">&nbsp;</span>Steele<span style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">&nbsp;</span>Associates</a>.</p>
-                </div>
-                <!--<div class="social-media-links">-->
-                <!--<a href="https://www.instagram.com/dentistrywithadifference/" target="_blank" class="social-icon si-colored si-instagram">-->
-                <!--<i class="icon-instagram"></i>-->
-                <!--<i class="icon-instagram"></i>-->
-                <!--</a>-->
-                <!--<a href="https://www.yelp.com/biz/dentistry-with-a-difference-dunwoody" class="social-icon si-colored si-yelp " target="_blank">-->
-                <!--<i class="icon-yelp"></i>-->
-                <!--<i class="icon-yelp"></i>-->
-                <!--</a>-->
-                <!--<a href="https://www.facebook.com/pg/dentistrywithadifference/reviews/?ref=page_internal" target="_blank" class="social-icon si-colored si-facebook ">-->
-                <!--<i class="icon-facebook"></i>-->
-                <!--<i class="icon-facebook"></i>-->
-                <!--</a>-->
-                <!--<a href="https://www.youtube.com/watch?v=_Rq_xN5cL-A&feature=youtu.be" target="_blank" class="social-icon si-colored si-youtube">-->
-                <!--<i class="icon-youtube"></i>-->
-                <!--<i class="icon-youtube"></i>-->
-                <!--</a>-->
-                <!--</div>-->
+    <!-- Copyrights
+    ============================================= -->
+    <div id="copyrights">
+
+        <div class="container clearfix">
+
+            <div class="col_half">
+                Copyrights &copy; 2014 All Rights Reserved by Canvas Inc.<br>
+                <div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
             </div>
+
+            <div class="col_half col_last tright">
+                <div class="fright clearfix">
+                    <a href="#" class="social-icon si-colored si-facebook">
+                        <i class="icon-facebook"></i>
+                        <i class="icon-facebook"></i>
+                    </a>
+
+
+                    <a href="#" class="social-icon si-colored si-gplus">
+                        <i class="icon-gplus"></i>
+                        <i class="icon-gplus"></i>
+                    </a>
+
+                    <a href="#" class="social-icon si-colored si-yelp">
+                        <i class="icon-yelp"></i>
+                        <i class="icon-yelp"></i>
+                    </a>
+
+                </div>
+
+                <div class="clear"></div>
+
+                <i class="icon-envelope2"></i> info@canvas.com <span class="middot">&middot;</span> <i class="icon-headphones"></i> +91-11-6541-6369 <span class="middot">&middot;</span> <i class="icon-skype2"></i> CanvasOnSkype
+            </div>
+
         </div>
-    </div>
+
+    </div><!-- #copyrights end -->
 
 </footer><!-- #footer end -->
 
@@ -1198,16 +1264,18 @@
 <script>
     var map;
     function initMap() {
-        var myLatLng = {lat: 42.297333, lng: -71.430401};
+        var myLatLng = {lat: 36.599086, lng: -119.446154};
         map = new google.maps.Map(document.getElementById('google-map'), {
             center: myLatLng,
             zoom: 17,
             scrollwheel: false,
-            draggable: false
+            draggable: false,
+            disableDefaultUI: true
         });
         var marker = new google.maps.Marker({
             position: myLatLng,
             map: false,
+            marker:'Ikuta'
         });
     }
 </script>
