--- a/index.html
+++ b/index.html
@@ -1070,8 +1070,9 @@
 
         <section id="location" class="location">
             <div class="container">
+                <a href="#" data-scrollto="#header"><div class="img-wrap img-wrap-three hidden-lg hidden-md"><img src="images/ikuta-symbol.svg" alt="Ikuta Symbol"></div></a>
                 <div class="row">
-                    <div class="col-sm-4 col-1">
+                    <div class="col-md-4 col-1">
                         <h6 class="h6-1">Deric Ikuta, DDS</h6>
                         <h6>Dennis Ikuta, DDS</h6>
                         <p class="p-1">1112 C Street</p>
@@ -1096,8 +1097,8 @@
                         </div>
 
                     </div>
-                    <div class="col-sm-4 col-2">
-                        <div class="img-wrap img-wrap-one"><img src="images/ikuta-symbol.svg" alt="Ikuta Symbol"></div>
+                    <div class="col-md-4 col-2">
+                        <div class="img-wrap img-wrap-one hidden-sm hidden-xs hidden-xxs"><img src="images/ikuta-symbol.svg" alt="Ikuta Symbol"></div>
                         <div class="img-wrap img-wrap-two"><img src="images/ikuta-label.svg" alt="Dr. Ikuta"></div>
                         <p class="p-1">New Patient Hotline</p>
                         <p class="p-2"><a href="tel:+18887038289">(888) 703&#8209;8289</a></p>
@@ -1105,7 +1106,7 @@
                         <div class="button-wrap"><a class="button" data-toggle="modal" data-target="#contact-modal">Request an Appointment</a></div>
 
                     </div>
-                    <div class="col-sm-4 col-3">
+                    <div class="col-md-4 col-3">
                         <h6>Office Hours:</h6>
                         <div class="schedule">
                             <div class="days">
